--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,62 @@
-.App {
+body {
+  margin: 0;
+  padding: 0;
+}
+.social {
+  position: abosolute;
+  top: 50%;
+  transform: translateY(250%);
   text-align: center;
+  width: 100%;
+}
+.btn {
+  display: inline-block;
+  width: 90px;
+  height: 90px;
+  background: #f1f1f1;
+  margin: 10px;
+  border-radius: 30%;
+  box-shadow: 0 5px 15px -5px #00000070;
+  color: #3498db;
+  overflow: hidden;
+  position: relative;
+}
+.btn i {
+  line-height: 90px;
+  font-size: 32px;
+  transition: 0.2s linear;
+}
+.btn:hover .media {
+  transform: scale(1.3);
+  color: #f1f1f1;
+}
+.btn::before {
+  content: " ";
+  position: absolute;
+  width: 120%;
+  height: 120%;
+  background-color: #3498db;
+  transform: rotate(45deg);
+  left: -110%;
+  top: 90%;
+}
+.btn:hover::before {
+  animation: aaa 0.7s 1;
+  top: -10%;
+  left: -10%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@keyframes aaa {
+  0% {
+    left: -110%;
+    top: 90%;
   }
-  to {
-    transform: rotate(360deg);
+  50% {
+    left: 10%;
+    top: -30%;
+  }
+  100% {
+    top: -10%;
+    left: -10%;
   }
 }
